Add route GET categories
