# internal/router/v1.go
@@ -8,15 +8,8 @@ import (
 
 func RegisterV1Routes(mux *http.ServeMux, h *handler.Handlers) {
 	mux.HandleFunc("GET /api/v1/health", h.V1.Health.Check)
+	mux.HandleFunc("GET /api/v1/categories", h.V1.Category.GetAllCategories)
 	mux.HandleFunc("POST /api/v1/categories", h.V1.Category.PostCategory)
-	mux.HandleFunc("/api/v1/categories/{id}", func(w http.ResponseWriter, r *http.Request) {
-		switch r.Method {
-		case http.MethodGet:
-			h.V1.Category.GetCategoryById(w, r)
-		case http.MethodDelete:
-			h.V1.Category.DeleteCategoryById(w, r)
-		default:
-			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
-		}
-	})
+	mux.HandleFunc("GET /api/v1/categories/{id}", h.V1.Category.GetCategoryById)
+	mux.HandleFunc("DELETE /api/v1/categories/{id}", h.V1.Category.DeleteCategoryById)
 }
